# sfm_local_controller

./: CMakeLists.txt  README.md  package.xml  sfm_plugin.xml
cfg/: SFMLocalController.cfg  local_planner.yaml
include/sfm_local_controller/: collision_checker.h  sensor_interface.h  sfm_controller.h  sfm_controller_ros.h
src/: collision_checker.cpp  sensor_interface.cpp  sfm_controller.cpp  sfm_controller_ros.cpp
